[project]
name = "src"
version = ""
description = ""
authors = [
    {name = "sovlookup", email = "gonorth@qq.com"},
]
dependencies = [
    "surrealdb>=0.1.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.scripts]
start = "python src/main.py"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
